Fixed text align issues

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -17,7 +17,7 @@ html {
 body {
     max-width: 960px;
     text-align: center;
-    padding:0 center;
+    padding:0;
     margin:0 auto;
     font-size: 16px;
     font-family:"Merienda","Lato",sans-serif;
@@ -69,7 +69,6 @@ nav {
     background-color: var(--accent1-color);
     line-height: 1rem;
     font-size: 1.2rem;
-    text-align: auto;
     padding-right: 2.5rem;
     padding-bottom: 1rem;
     padding-top: 1rem;
@@ -78,7 +77,6 @@ nav {
 nav>ul {
     list-style-type: none;
     display: inline-flex;
-    text-align: auto;
 }
 
 nav a {
